tests/snapshots/fixtures__planning@overlay-combines-issue-groups.kdl.snap
---
source: tests/fixtures.rs
assertion_line: 11
expression: result
input_file: tests/fixtures/planning/overlay-combines-issue-groups.kdl
---
exit: 0

branch AB-100-feat-add-widget:
  * feat: add widget
  * feat: add gadget
