tests/snapshots/fixtures__planning@separate-flag-splits-same-issue.kdl.snap
---
source: tests/fixtures.rs
assertion_line: 11
expression: result
input_file: tests/fixtures/planning/separate-flag-splits-same-issue.kdl
---
exit: 0

branch feat-add-widget:
  * feat: add widget

branch feat-extend-widget:
  * feat: extend widget
