tests/snapshots/fixtures__planning@single-commit-single-issue.kdl.snap
---
source: tests/fixtures.rs
assertion_line: 11
expression: result
input_file: tests/fixtures/planning/single-commit-single-issue.kdl
---
exit: 0

branch AB-100-feat-add-widget:
  * feat: add widget
