tests/snapshots/fixtures__pre_validation@cross-group-dependency.kdl.snap
---
source: tests/fixtures.rs
assertion_line: 21
expression: result
input_file: tests/fixtures/pre_validation/cross-group-dependency.kdl
---
exit: 1

error: cherry-pick would fail for branch `AB-200-feat-extend-config`
  --> commit "feat: extend config"
   |
   = conflict in src/config.rs
   |
   = help: these commits have overlapping changes and cannot be split
           into separate branches from the same base
   = help: consider assigning them to the same issue, or use `--overlay`
           to combine them into a single PR
