tests/snapshots/fixtures__pre_validation@delete-vs-modify.kdl.snap
---
source: tests/fixtures.rs
assertion_line: 21
expression: result
input_file: tests/fixtures/pre_validation/delete-vs-modify.kdl
---
exit: 1

error: cherry-pick would fail for branch `AB-200-feat-extend-old-module`
  --> commit "feat: extend old module"
   |
   = conflict in src/old.rs
   |
   = help: these commits have overlapping changes and cannot be split
           into separate branches from the same base
   = help: consider assigning them to the same issue, or use `--overlay`
           to combine them into a single PR
