tests/snapshots/fixtures__pre_validation@different-regions-no-conflict.kdl.snap
---
source: tests/fixtures.rs
assertion_line: 21
expression: result
input_file: tests/fixtures/pre_validation/different-regions-no-conflict.kdl
---
exit: 0

branch AB-100-feat-change-top-for-widget:
  * feat: change top for widget

branch AB-200-feat-change-bottom-for-gadget:
  * feat: change bottom for gadget
